--- a/app/templates/modals/edit_novel.html
+++ b/app/templates/modals/edit_novel.html
@@ -29,6 +29,9 @@
 
       <!--Modal Footer-->
       <div class="modal-footer flex-center">
+        <div class="spinner-border text-success mx-3 spinner_cust" role="status" id="edit_novel_spinner">
+          <span class="sr-only"></span>
+        </div>
         {{ form.submit(class="btn btn-success btn-cust", id="edit_novel_submit_btn") }}
         <button class="btn btn-outline-danger btn-cust" data-dismiss="modal"> Cancel </button>
       </div>
