--- a/app/templates/modals/remove_novel.html
+++ b/app/templates/modals/remove_novel.html
@@ -25,6 +25,9 @@
 
       <!--Modal Footer-->
       <div class="modal-footer flex-center">
+        <div class="spinner-border text-success mx-3 spinner_cust" role="status" id="remove_novel_spinner">
+          <span class="sr-only"></span>
+        </div>
         {{ form.submit(class="btn btn-danger btn-cust", id="remove_novel_submit_btn") }}
         <button class="btn btn-outline-danger btn-cust" data-dismiss="modal"> Cancel </button>
       </div>
