--- a/app/templates/modals/register_novel.html
+++ b/app/templates/modals/register_novel.html
@@ -1,8 +1,8 @@
 {% macro register_novel_modal(form) %}
-<div class="modal fade" id="register_modal_push" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<div class="modal fade" id="register_novel_modal_push" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered modal-lg modal-notify modal-info" role="document">
     <!-- Modal Form Content-->
-    <form class="modal-content text-center modal-cust register_modal_cust" id="register_novel_form" action="{{ url_for('library_register_novel') }}">
+    <form class="modal-content text-center modal-cust register_novel_modal_cust" id="register_novel_form" action="{{ url_for('library_register_novel') }}">
       <!--Modal Header-->
       <div class="modal-header d-flex justify-content-center">
         <p class="modal_header_cust register_novel_header"> Register a Novel </p>
@@ -25,6 +25,12 @@
               </div>
             </div>
             <div class="form-group form_group_cust">
+              {{ form.series_host.label(class="form-control-label label_cust") }}
+              <div class="form_input_div">
+                {{ form.series_host(class="form-control input_cust") }}
+              </div>
+            </div>
+            <div class="form-group form_group_cust">
               {{ form.series_code.label(class="form-control-label label_cust") }}
               <div class="form_input_div">
                 {{ form.series_code(class="form-control input_cust", placeholder="http://ncode.syosetu.com/XXXXXXX") }}
@@ -35,6 +41,9 @@
 
       <!--Modal Footer-->
       <div class="modal-footer flex-center">
+        <div class="spinner-border text-success mx-3 spinner_cust" role="status" id="register_novel_spinner">
+          <span class="sr-only"></span>
+        </div>
         {{ form.submit(class="btn btn-success btn-cust", id="register_novel_submit_btn") }}
         <button class="btn btn-outline-danger btn-cust" data-dismiss="modal"> Cancel </button>
       </div>
