--- a/app/templates/library.html
+++ b/app/templates/library.html
@@ -18,6 +18,19 @@
 		{{ edit_novel_modal(edit_form)}}
 		{{ remove_novel_modal(rmv_form)}}
 
+		<!-- Progress bar -->
+		<div class="progress_bar_display">
+			<div class="progress_bar_label">
+				Updating
+			</div>
+			<div class="progress_bar_container">
+				<div class="progress" style="height: 1.5rem;">
+					<div class="progress-bar progress-bar-animated progress-bar-striped bg-warning" id="update_progress_bar"
+						role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+				</div>
+			</div>
+		</div>
+
 		<!-- Main content -->
 		<div class="banner" id="library_banner">
 			<div class="banner_ico" id="library_icon">
