--- a/app/templates/series_entry.html
+++ b/app/templates/series_entry.html
@@ -35,11 +35,11 @@
 			</div>
 		</div>
 		<div class="entry_download_bar">
-			<div class="download_btn table_of_contents" onclick="location.href='{{'/library/' ~ novel.code}}'">
+			<div class="series_entry_btn table_of_contents" onclick="location.href='{{'/library/' ~ novel.code}}'">
 				<span> Table of Contents </span>
 				<ion-icon style="font-size: 1.5rem; margin: 0 auto;" name="library-outline"></ion-icon>
 			</div>
-			<div class="download_btn download_next" onclick="location.href='{{'/library/' ~ novel.code ~ '/' ~ next_ch}}'">
+			<div class="series_entry_btn download_next" onclick="location.href='{{'/library/' ~ novel.code ~ '/' ~ next_ch}}'">
 				<span> Read Next </span>
 				<ion-icon style="font-size: 1.5rem; margin: 0 auto;" name="arrow-redo"></ion-icon>
 			</div>
