General progress towards completion of /library
- Finished basic backend implementation  to fetch raws from host and display to the user without dictionary preprocessing
- Finished template for chapter and routing for backend
- Implemented toolbelt for convenience during reading
- Reorganized and restructured some backend script code

--- a/app/templates/general_layout.html
+++ b/app/templates/general_layout.html
@@ -14,6 +14,10 @@
 
 	<title>{{ title }}</title>
 
+	<!-- Meta variables (jinja2 vars available to JS) -->
+	{% block metavars %}
+	{% endblock metavars %}
+
 </head>
 <body>
 	<!-- Page content -->
@@ -46,3 +50,7 @@
 
 </body>
 </html>
+
+{% macro define_metavar(id, value) %}
+	<meta id="mdata_{{id}}" data-value="{{value}}">
+{% endmacro %}
