--- a/app/static/main.css
+++ b/app/static/main.css
@@ -641,6 +641,12 @@ pre#unbootstrap{
   display: flex;
   flex-direction: column;
 }
+.toc_menu_options{
+  width: 100%;
+  margin: 1rem 0;
+  padding: 1rem 0;
+  border-bottom: 1px solid #d2d2d2;
+}
 .toc_menu_btn{
   margin: auto 0.5rem;
   font-variant: all-petite-caps;
@@ -689,7 +695,17 @@ pre#unbootstrap{
 /*---------------------[ Chapter Stylings ]-----------------------*/
 .section_chapter{
   padding: 10rem 3rem;
-  max-width: 75rem;
+  max-width: 120rem;
+}
+.chapter_toolbelt{
+  width: 100%;
+  height: 4rem;
+  margin: 3rem auto 0 auto;
+}
+.content_title{
+  border-top: 1px solid #9a9a9a;
+  border-bottom: 1px solid #9a9a9a;
+  color: #c30000;
 }
 .chapter_series_title_div{
   width: fit-content;
@@ -708,4 +724,33 @@ pre#unbootstrap{
   font-variant: all-petite-caps;
   font-weight: bold;
   color: #4e4e4e;
+}
+.dummy{
+  /* Make it invisible */
+  color: rgba(0, 0, 0, 0);
+  font-size: 0.001rem;
+  margin: 0;
+  /* Make it unselectable */
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+.chapter_line_div{
+  width: 100%;
+  margin: 3rem 0;
+}
+.chapter_line{
+  font-size: 1.5rem;
+  margin: 0.5rem 0;
+}
+.content_raw{
+  font-size: 1rem;
+  color: #adadad;
+}
+.chapter_image_div{
+  width: 100%;
+}
+.chapter_image{
 }
