--- a/app/templates/library.html
+++ b/app/templates/library.html
@@ -36,7 +36,7 @@
 
 		<!-- Main content -->
 		<div class="banner" id="library_banner">
-			<div class="banner_ico" id="library_icon">
+			<div class="banner_icon" id="library_icon">
 				<ion-icon name="book"></ion-icon>
 			</div>
 			<div class="banner_title" id="library_title">Library</div>
