--- a/app/templates/series_entry.html
+++ b/app/templates/series_entry.html
@@ -1,5 +1,5 @@
 {% macro series_entry(novel) %}
-	{% set next_ch = novel.current_ch + 1 %}
+	{% set resume_ch = [novel.current_ch, 1] | max %}
 	<div class="library_series_entry" id="series_{{novel.abbr}}">
 		<div class="entry_minibanner">
 			<div class="minibanner entry_abbr"> {{novel.abbr}} </div>
@@ -35,12 +35,14 @@
 			</div>
 		</div>
 		<div class="entry_download_bar">
-			<div class="series_entry_btn table_of_contents" onclick="location.href='{{'/library/' ~ novel.code}}'">
+			<div class="series_entry_btn table_of_contents" onclick="location.href='{{url_for('library_series_toc',series_code=novel.code)}}'"
+				title="Go to Table of Contents">
 				<span> Table of Contents </span>
 				<ion-icon style="font-size: 1.5rem; margin: 0 auto;" name="library-outline"></ion-icon>
 			</div>
-			<div class="series_entry_btn download_next" onclick="location.href='{{'/library/' ~ novel.code ~ '/' ~ next_ch}}'">
-				<span> Read Next </span>
+			<div class="series_entry_btn download_next" onclick="location.href='{{url_for('library_series_chapter', series_code=novel.code, ch=resume_ch)}}'"
+				title="Read chapter {{resume_ch}}">
+				<span> Resume </span>
 				<ion-icon style="font-size: 1.5rem; margin: 0 auto;" name="arrow-redo"></ion-icon>
 			</div>
 		</div>
