--- a/app/templates/dictionary.html
+++ b/app/templates/dictionary.html
@@ -14,7 +14,23 @@
 			<div class="banner_title" id="dictionary_title">Dictionary</div>
 		</div>
 		<div class="dictionary_body">
-
+			<div class="dict_topbar_div">
+				<button type="button" class="btn btn-success">
+					Download All
+				</button>
+				<div class="dropdown">
+					<button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+					Dropdown button
+					</button>
+					<div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+						<a class="dropdown-item">Action</a>
+						<a class="dropdown-item">Another action</a>
+						<a class="dropdown-item">Something else here</a>
+					</div>
+				</div>
+			</div>
+			<div class="dict_textbody_div">
+			</div>
 		</div>
 	</section>
 {% endblock %}
